tests/ui/compile-fail/pin_data/twice_pin.rs
use pin_init::*;

#[pin_data]
struct Foo {
    #[pin]
    #[pin]
    a: usize,
}

fn main() {}
