tests/ui/compile-fail/pin_data/twice_pin.stderr
error: #[pin] attribute set twice
 --> tests/ui/compile-fail/pin_data/twice_pin.rs:7:5
  |
7 |     a: usize,
  |     ^^^^^^^^
